tests/reference/asr-read_end_label_nonliteral_01-926a8b1.stderr
semantic error: `end` must be a literal integer label
 --> tests/errors/read_end_label_nonliteral_01.f90:1:1
  |
1 | program read_end_label_nonliteral_01
  | ^ 
